--- a/Baha'i/Others/ROB/V2/p337-369Ch16.html
+++ b/Baha'i/Others/ROB/V2/p337-369Ch16.html
@@ -2,6 +2,7 @@
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V2\p337-369Ch16.html -->
 
 <!-- ISSUES LOG
+	 page 347  - changed "7. 'Abdu'l-Bahá, <i>Some Answered Questions</i>, p. 79 (Brit.), pp. 97-8 (U.S.)." {page number not the same as version being used in Covenant Library}
 	 page 350  - added: <i>The Hidden Words</i>, Persian no. 24, 25, 28, 30
 
 -->
@@ -196,7 +197,7 @@
        <td VALIGN=top><small><center><a name="p347">347</a></center><p>
 	   * See vol. 1, p. <a href="../V1/p198-209Ch11.html#p208">208</a><p>
 	   <hr>
-	   7. 'Abdu'l-Bahá, <i>Some Answered Questions</i>, p. 79 (Brit.), pp. 97-8 (U.S.).
+	   7. 'Abdu'l-Bahá, <i>Some Answered Questions</i>, p. 79 (Brit.), <a href="../../../AB/SAQ/p081-140Part2.html#para9">ch. 16</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -267,7 +268,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p352">352</a></center><p>
-	   * According to Bahá'í belief the Biblical story of Adam is allegorical and He was the first Manifestation of God in recorded history (see <i>Some Answered Questions</i> by 'Abdu'l-Bahá).<p>
+	   * According to Bahá'í belief the Biblical story of Adam is allegorical and He was the first Manifestation of God in recorded history (see <a href="../../../AB/SAQ/p307-324Index.html#Adam"><i>Some Answered Questions</i></a> by 'Abdu'l-Bahá).<p>
 	   † See pp. <a href="p001-028Ch01.html#p16">16</a>-18.<p>
 	   ‡ See vol. 1, pp. <a href="../V1/p153-197Ch10.html#p193">193</a>-4.
 
