--- a/Baha'i/Others/ROB/V2/p451-454Biblio.html
+++ b/Baha'i/Others/ROB/V2/p451-454Biblio.html
@@ -36,7 +36,7 @@
        <td><p>
        <center><h2>BIBLIOGRPAHY</h2></center><p>
 	   'ABDU'L-BAHÁ. <i>Memorials of the Faithful</i>. Translated from the original Persian text and annotated by Marzieh Gail. Wilmette, Illinois: Bahá'í Publishing Trust, 1971.<p>
-	   <blockquote><i>Some Answered Questions</i>. Collected and Translated from the Persian of 'Abdu'l-Bahá by Laura Clifford Barney. London: Kegan Paul, Trench, Trubner & Co. Ltd., 1908. Chicago: Bahá'í Publishing Society, 1918. London: Bahá'í Publishing Trust, 1961. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1964.<p></blockquote>
+	   <blockquote><a href="../../../AB/SAQ/Cover.html"><i>Some Answered Questions</i></a>. Collected and Translated from the Persian of 'Abdu'l-Bahá by Laura Clifford Barney. London: Kegan Paul, Trench, Trubner & Co. Ltd., 1908. Chicago: Bahá'í Publishing Society, 1918. London: Bahá'í Publishing Trust, 1961. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1964.<p></blockquote>
 	   ABU'L-FADL, MÍRZÁ. <i>Kitábu'l-Fará'id</i>. An apologia. Cairo, undated. Written in 1315 A.H. (A.D. 1899).<p>
 	   BÁB, The. <i>Natíjatu'l-Bayán</i>. (The Fruit of the Bayán). A compilation of the Writings of the Báb. Tihrán, Bahá'í Publishing Trust, 105 B.E. (A.D. 1948).<p>
 	   <i>Bahá'í Revelation, The</i>. A Selection from the Bahá'í Holy Writings. London: Bahá'í Publishing Trust, 1955.<p>
