--- a/Baha'i/Others/ROB/V2/p469-476Index.html
+++ b/Baha'i/Others/ROB/V2/p469-476Index.html
@@ -168,7 +168,7 @@
 	   Ásíyih Khánum (Navváb), wife of Bahá'u'lláh, <a href= "../V2/p001-028Ch01.html#p6">6</a><p>
 	   <a name="Attachment">Attachment</a>: to the next world, <a href= "../V2/p029-054Ch02.html#p36">36</a>-9; to the Kingdom of Names, <a href= "../V2/p029-054Ch02.html#p39">39</a>-43<p>
 	   Azízu'lláh-i-Misbáh, Mírzá, <a href= "../V2/p029-054Ch02.html#p38">38</a>-9, <a href= "../V2/p029-054Ch02.html#p44">44</a>, <a href= "../V2/p065-106Ch04.html#p81">81</a>, <a href= "../V2/p171-193Ch08.html#p191">191</a><p>
-	   Báb, The (Siyyid 'Alí-Muhammad):
+	   <a name="Báb,The">Báb, The</a> (Siyyid 'Alí-Muhammad):
 	   <blockquote>Revelation of, <a href= "../V2/p001-028Ch01.html#p14">14</a>, <a href= "../V2/p065-106Ch04.html#p75">75</a>, <a href= "../V2/p171-193Ch08.html#p182">182</a>;<br>and Bahá'u'lláh, <a href= "../V2/p065-106Ch04.html#p76">76</a>, <a href= "../V2/p370-387Ch17.html#p376">376</a>-81;<br>Covenant of, <a href= "../V2/p236-269Ch11.html#p237">237</a>;<br>and Mírzá Yahyá, <a href= "../V2/p236-269Ch11.html#p242">242n.</a>,</blockquote>
 	   </blockquote>
 	   </small>
@@ -180,7 +180,6 @@
        <td>
 	   <blockquote>
 	   <small>
-	   Báb, <i>Cont'd</i><p>
 	   <blockquote><a href= "../V2/p236-269Ch11.html#p247">247</a>;<br>purpose of His mission, <a href= "../V2/p001-028Ch01.html#p14">14</a>, <a href= "../V2/p370-387Ch17.html#p378">378</a>;<br>seals of, <a href= "../V2/p137-151Ch06.html#p147">147</a>, <a href= "../V2/p152-170Ch07.html#p164">164</a>;<br>also, <a href= "../V2/p065-106Ch04.html#p86">86</a>, <a href= "../V2/p107-136Ch05.html#p119">119</a>, <a href= "../V2/p194-221Ch09.html#p202">202</a>-4, <a href= "../V2/p194-221Ch09.html#p210">210</a>-11, <a href= "../V2/p301-336Ch15.html#p303">303</a>, <a href= "../V2/p301-336Ch15.html#p321">321</a>, <a href= "../V2/p337-369Ch16.html#p354">354</a>, <a href= "../V2/p370-387Ch17.html#p375">375</a>-6, <a href= "../V2/p370-387Ch17.html#p382">382</a>-7 403<p></blockquote>
 	   Bábá'í, Áqá Mullá, <a href= "../V2/p065-106Ch04.html#p99">99</a>-l00<p>
 	   <a name="Bábí(s)">Bábí(s)</a>, People of the <i>Bayán</i>:
@@ -204,7 +203,7 @@
 	   Buzurg Khán, Mírzá', Persian consul-general in Baghdád, <a href= "../V2/p301-336Ch15.html#p323">323</a>-4, <a href= "../V2/p301-336Ch15.html#p332">332</a>, <a href= "../V2/p301-336Ch15.html#p333">333</a><p>
 	   Carmel, Mount, <a href= "../V2/p001-028Ch01.html#p2">2</a><p>
 	   <a name="CauseofGod">Cause of God</a>, <a href= "../V2/p001-028Ch01.html#p20">20</a>-1, <a href= "../V2/p107-136Ch05.html#p127">127</a>, <a href= "../V2/p171-193Ch08.html#p186">186</a>, <a href= "../V2/p171-193Ch08.html#p191">191</a>, <a href= "../V2/p236-269Ch11.html#p262">262</a>-5, <a href= "../V2/p236-269Ch11.html#p268">268</a>, <a href= "../V2/p283-290Ch13.html#p286">286</a>, <a href= "../V2/p283-290Ch13.html#p289">289</a>, <a href= "../V2/p301-336Ch15.html#p320">320</a>-1; fate of enemies of, <a href= "../V2/p137-151Ch06.html#p148">148</a>-50; and disbelief, <a href= "../V2/p065-106Ch04.html#p81">81</a>; eventual triumph of, <a href= "../V2/p337-369Ch16.html#p356">356</a>, <a href= "../V2/p397-421Ch19.html#p415">415</a>-16, <a href= "../V2/p397-421Ch19.html#p418">418</a>; teach the, <a href= "../V2/p065-106Ch04.html#p91">91</a>-106<p>
-	   Christ (Jesus), <a href= "../V2/p001-028Ch01.html#p21">21</a>-3, <a href= "../V2/p029-054Ch02.html#p32">32</a>, <a href= "../V2/p107-136Ch05.html#p121">121</a>, <a href= "../V2/p107-136Ch05.html#p124">124</a>, <a href= "../V2/p137-151Ch06.html#p139">139</a>, <a href= "../V2/p171-193Ch08.html#p183">183</a>, <a href= "../V2/p301-336Ch15.html#p311">311</a><p>
+	   <a name="Christ">Christ</a> (Jesus), <a href= "../V2/p001-028Ch01.html#p21">21</a>-3, <a href= "../V2/p029-054Ch02.html#p32">32</a>, <a href= "../V2/p107-136Ch05.html#p121">121</a>, <a href= "../V2/p107-136Ch05.html#p124">124</a>, <a href= "../V2/p137-151Ch06.html#p139">139</a>, <a href= "../V2/p171-193Ch08.html#p183">183</a>, <a href= "../V2/p301-336Ch15.html#p311">311</a><p>
 	   <a name="Clergy">Clergy</a>, <a href= "../V2/p065-106Ch04.html#p66">66</a>, <a href= "../V2/p171-193Ch08.html#p184">184</a>, <a href= "../V2/p236-269Ch11.html#p259">259</a>, <a href= "../V2/p301-336Ch15.html#p319">319</a>, <a href= "../V2/p337-369Ch16.html#p338">338</a>, <a href= "../V2/p337-369Ch16.html#p349">349</a>-50; fall of, <a href= "../V2/p270-282Ch12.html#p271">271</a>-2<p>
 	   Companions of Bahá'u'lláh, <i>see</i> <a href="../V2/p469-476Index.html#companionsofBahá'u'lláh">Bahá'u'lláh, companions of</a>; interrogation of, <a href= "../V2/p301-336Ch15.html#p328">328</a>-32<p>
 	   Constantinople (Istanbul), <a href="../V2/p001-028Ch01.html">ch. 1</a> <i>passim</i>; <a href= "../V2/p301-336Ch15.html#p317">317</a>-18, <a href= "../V2/p301-336Ch15.html#p327">327</a>; <i>see</i> <a href="../V2/p469-476Index.html#Bahá'u'lláhinConstantinople">Bahá'u'lláh in</a><p>
@@ -320,9 +319,9 @@
 	   Mirrors of the Bábí Dispensation, <a href= "../V2/p370-387Ch17.html#p376">376</a>-7<p>
 	   Mírzáy-i-Halabí-Sáz, Hájí, of Yazd, <a href= "../V2/p337-369Ch16.html#p358">358</a><p>
 	   Mishkín-Qalam (Mírzá Husayn), <a href= "../V2/p194-221Ch09.html#p213">213</a>, <a href= "../V2/p301-336Ch15.html#p328">328</a>, <a href= "../V2/p397-421Ch19.html#p402">402</a>, <a href= "../V2/p397-421Ch19.html#p408">408</a><p>
-	   Moses, <a href= "../V2/p107-136Ch05.html#p121">121</a>, <a href= "../V2/p291-300Ch14.html#p295">295</a>, <a href= "../V2/p397-421Ch19.html#p411">411</a><p>
+	   <a name="Moses">Moses</a>, <a href= "../V2/p107-136Ch05.html#p121">121</a>, <a href= "../V2/p291-300Ch14.html#p295">295</a>, <a href= "../V2/p397-421Ch19.html#p411">411</a><p>
 	   Mosul, <a href= "../V2/p301-336Ch15.html#p334">334</a>-6<p>
-	   Muhammad, Prophet of Islám, <a href= "../V2/p001-028Ch01.html#p21">21</a>-3, <a href= "../V2/p065-106Ch04.html#p75">75</a>, <a href= "../V2/p107-136Ch05.html#p121">121</a>, <a href= "../V2/p283-290Ch13.html#p287">287</a>, <a href= "../V2/p301-336Ch15.html#p303">303</a>, <a href= "../V2/p397-421Ch19.html#p414">414</a><p>
+	   <a name="Muhammad,ProphetofIslám"></a>Muhammad, Prophet of Islám, <a href= "../V2/p001-028Ch01.html#p21">21</a>-3, <a href= "../V2/p065-106Ch04.html#p75">75</a>, <a href= "../V2/p107-136Ch05.html#p121">121</a>, <a href= "../V2/p283-290Ch13.html#p287">287</a>, <a href= "../V2/p301-336Ch15.html#p303">303</a>, <a href= "../V2/p397-421Ch19.html#p414">414</a><p>
 	   Muhammad, Hájí Mírzá Siyyid, uncle of the Báb, <a href= "../V2/p065-106Ch04.html#p69">69</a>, <a href= "../V2/p065-106Ch04.html#p71">71</a><p>
 	   Muhammad-'Alíy-i-Gázur, Áqá, <a href= "../V2/p065-106Ch04.html#p105">105</a><p>
 	   <a name="Muhammad-'Alí,Mírzá">Muhammad-'Alí, Mírzá</a>, son of Bahá'u'lláh <a href= "../V2/p236-269Ch11.html#p260">260</a> and n., <a href= "../V2/p236-269Ch11.html#p267">267</a>, <a href= "../V2/p270-282Ch12.html#p273">273</a>, <a href= "../V2/p270-282Ch12.html#p276">276</a>, <a href= "../V2/p283-290Ch13.html#p289">289</a><p>
