--- a/Baha'i/Others/ROB/V3/p174-203Ch09.html
+++ b/Baha'i/Others/ROB/V3/p174-203Ch09.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p147-173Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p204-220Ch10.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -141,7 +141,7 @@
 	   <hr>
 	   2. Quoted in Faizi, <i>L'álíy-i-Darakhshán</i>, p. 396.<p>
 	   3. <i>Áthár-i-Qalam-i-A'lá</i>, vol. I, p. 166.<p>
-	   4. <i>ibid</i>. p. 169.<p>
+	   4. <i>ibid</i>. p. 169.<p> 
 	   5. <i>ib</i>id. p. 189.
 	   </small></td>
 </tr>
@@ -170,7 +170,7 @@
 </tr>
 <tr>
        <td>
-	   him. This is the translation of some of his words:<p>
+	   him. This is the translation of some of his words:<p> 
 	   <blockquote>This Tablet...was chanted by the Beauty of the All-Bountiful.* What an effect it had on me! To what a world did I ascend! To what a paradise did I enter! What did I see! In what way did I hear that voice and that melody!...These I cannot tell. I entered that Paradise which no eye had seen, and no ear had heard, nor any heart had felt. I saw the Kingdom of grandeur and majesty, and felt the might, the transcendent power, the glory, and the sovereignty of the ever-living, the ever-abiding, the incomparable God. But to speak of it, write about it, give an image or likeness of it, exalt and sanctify it, allude to it, extol and praise it, or describe and narrate it, all these are impossible for this humble servant or anyone else in the world. We have only access to words and terms, whereas that experience and condition are exalted above all things. They cannot be put into words or described by talks. No one can interpret the inner feelings of one's conscience...But this condition remains only for a single moment. It is a fleeting experience. Its manifestation within the human being is due to a special bounty of God. Its duration, varying from the twinkling of an eye to a longer period, depends upon one's capacity to become the recipient of this bounty. The deeds and actions of the person demonstrate its existence. But it has never been heard that this condition lasted for three or four months in a person except in Badí'...<small><sup>6</sup></small></blockquote>
 	   When Badí' learnt that Bahá'u'lláh was looking for someone to deliver a special Tablet to Násiri'd-Dín Sháh, he begged to be allowed to carry out this service, knowing full well that he would have to lay down his life. Bahá'u'lláh accepted him for this important mission, instructed him to proceed to Haifa where he would be given the Tablet and instructed him also not to associate with any believer, either on the way or in Tihrán. The Tablet to the Sháh of Persia was not handed to Badí' in 'Akká. Bahá'u'lláh entrusted Hájí Sháh-Muhammad-
 	   </td>
@@ -187,10 +187,10 @@
 	   The following is the story as recounted by Hájí Sháh-Muhammad to Hájí Mírzá Haydar-'Alí and recorded by the latter.<p>
 	   <blockquote>
 	   ...I was given a small case...and was instructed to hand it to Badí' at Haifa together with a small sum of money. I did not know anything about the contents of the case. I met him at Haifa and gave him the glad-tidings that he had been honoured with a trust...We left the town and walked up Mount Carmel where I handed him the case. He took it into his hands, kissed it and knelt with his forehead to the ground. I also delivered to him a sealed envelope [a Tablet of Bahá'u'lláh for Badí' himself]. He took twenty or thirty paces, sat down facing the most Holy Court ['Akká], read the Tablet and again prostrated himself to the ground. His face was illumined with the radiance of ecstasy and the tidings of joy. I asked him if I could read the Tablet also. He replied: 'There is no time.' I knew it was all a confidential matter. But what it was, I had no idea. I could not imagine such a mission.<p>
-	   I mentioned that we had better go to the town [Haifa] in order that, as instructed [by Bahá'u'lláh] I might give him some money. He said, 'I will not come to the town; you go and bring it here.' I went; when I returned I could not find him, in spite of much searching. He had gone...We had no news of him until we heard of his martyrdom in Tihrán. Then I knew that the case had contained the Tablet of Bahá'u'lláh to the Sháh and the sealed envelope contained a Tablet which imparted the glad-tidings of the martyrdom of the one who was the essence of steadfastness and strength.<small><sup>7</sup></small><p>
+	   I mentioned that we had better go to the town [Haifa] in order that, as instructed [by Bahá'u'lláh] I might give him some money. He said, 'I will not come to the town; you go and bring it here.' I went; when I returned I could not find him, in spite of much searching. He had gone...We had no news of him until we heard of his martyrdom in Tihrán. Then I knew that the case had contained the Tablet of Bahá'u'lláh to the Sháh and the sealed envelope contained a Tablet which imparted the glad-tidings of the martyrdom of the one who was the essence of steadfastness and strength.<small><sup>7</sup></small><p> 
 	   </blockquote>
 	   The same chronicler has written the following account given by a certain believer, Hájí 'Alí, who met Badí' on his way to Persia and travelled with him for some distance:<p>
-	   <blockquote>He was a very happy person, smiling, patient, thankful,</blockquote>
+	   <blockquote>He was a very happy person, smiling, patient, thankful,</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p183">183</a></center><p>
@@ -227,7 +227,7 @@
        <td>
 	   <i>Qur'án</i>: 'O King, I have come unto thee from Sheba with a weighty message.'*<p>
 	   Badí' was arrested. The Sháh, who must have remembered the attempt on his life by two Bábís about two decades earlier, was taken aback by the courage and fearlessness of Bahá'u'lláh's messenger. Sending the message to Mullá 'Alíy-i-Kání, a well-known Muslim divine, to provide an answer, he ordered his men to get from Badí', first through persuasion and promises, and then by torture if he refused to cooperate, the names of other Bahá'ís. The officer in charge was Kázim Khán-i-Qarachih-Dághí. When he failed to persuade Badí' to reveal names of other Bahá'ís to him, he ordered that he be stripped of his clothes and branded several times with hot bars of iron. Badí' endured these tortures for three successive days with a fortitude that astonished the officials who were watching him. They saw him utterly joyous while being tortured. It seemed to them that he was not feeling the pain; he often seemed to be laughing. This in spite of the fact that at times the smoke and smell created by the burning flesh was so intense that some officials could not stand it and had to leave the tent. The Sháh, who was usually eager to see the photographs of prisoners, ordered a photograph to be taken of Badí', especially when he had heard the stories of his fortitude under torture. This photograph shows the brazier of fire containing the rods of iron in the foreground and is the best testimony to the spirit of steadfastness and resignation, of calm and assurance which Badí''s face portrays.<p>
-	   As the three successive days of torture by branding yielded no information about the identity of other believers, the Chief officer, Kázim Khán, threatened Badí' with death unless he cooperated. Badí' smiled at this threat and, as he did not reveal any name, his head was beaten to a pulp with a butt of a rifle.<p>
+	   As the three successive days of torture by branding yielded no information about the identity of other believers, the Chief officer, Kázim Khán, threatened Badí' with death unless he cooperated. Badí' smiled at this threat and, as he did not reveal any name, his head was beaten to a pulp with a butt of a rifle.<p> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p186">186</a></center><p>
@@ -240,17 +240,19 @@
 	   In 1913 when 'Abdu'l-Bahá visited Paris, a high-ranking Persian officer by the name of Muhammad-Valí Khán, a Field Marshal (Sipah-Salár-i-A'zam), was staying in Paris for medical treatment. Mme. Dreyfus-Barney, a devoted American believer, met this man. Mme. Barney had in earlier years attained the presence of 'Abdu'l-Bahá in the Holy Land and had asked many questions of Him. 'Abdu'l-Bahá's answers were written down and later compiled by her and published under the title <i>Some Answered Questions</i>.<p>
 	   In Paris Mme. Dreyfus-Barney, having met the above-named Persian officer, presented him with a copy of that book. When Muhammad-Valí Khán read the account given by 'Abdu'l-Bahá of Bahá'u'lláh's Tablets to the kings including Násiri'd-Dín Sháh, he took up his pen and wrote in the margin some first-hand information he had personally heard from the fore-mentioned Kázim Khán, the officer in charge who tortured and eventually martyred Badí'. This is a translation of his notes:<p>
 	   <blockquote>
-	   6 Rabí'u'l-Avval 1331<br>
+	   6 Rabí'u'l-Avval 1331<br> 
 	   26 February AD 1913<br>
 	   Paris, Hotel d'Albe, Avenue Champs Elysée<p>
 	   That year, when this letter [Bahá'u'lláh's Tablet] was sent, the messenger came to the Sháh in the summer resort of Lár, and this is the full account of what happened.<p>
-	   The late Násiri'd-Dín Sháh was very fond of the summer resorts of Lár, Núr* and Kujúr. He ordered my father, Sá'idu'd-Dawlih the Sardár [Sirdar], and myself (then a youth with the rank of Sarhang [Colonel]) to go to Kujúr and find provisions and victuals for the royal camp.† 'I am
+	   The late Násiri'd-Dín Sháh was very fond of the summer resorts of Lár, Núr* and Kujúr. He ordered my father, Sá'idu'd-Dawlih the Sardár [Sirdar], and myself (then a youth with the rank of Sarhang [Colonel]) to go to Kujúr and find provisions and victuals for the royal camp.† 'I am 
 	   </blockquote>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p187">187</a></center><p>
 	   * Bahá'u'lláh's ancestral home is in the district of Núr (Núr means light).(A.T.)<p>
 	   † When Násiri'd-Dín Sháh went on a hunting expedition or touring in the summer he took a large entourage with him. They included his ministers, thousands of troops with their officers, servants and executioners. (A.T.)
+	   <hr>
+	   <a href="../../../AB/SAQ/Cover.html"><i>Some Answered Questions</i></a>
 	   </small></td>
 </tr>
 <tr>
@@ -279,7 +281,7 @@
 <tr>
        <td>
 	   <blockquote>
-	   me and told him once again: "Give me the names of your comrades." He did not answer me at all and began to laugh. It seemed as if all that beating had not harmed him in any way. This made me angry. I ordered a branding-iron to be brought and a lighted brazier.* While they were preparing the brazier I said: "Come and speak the truth, else I will have you branded"; and at that I noticed that his laughter increased. Then I had him bastinadoed again. Beating him that much tired out the <i>farráshes</i>. I myself was also tired out. So I had him untied and taken to the back of another tent, and told the <i>farráshes</i> that by dint of branding they ought to get a confession from him. They applied red-hot iron several times to his back and chest. I could hear the sizzling noise of the burning flesh and smell it too. But no matter how hard we tried we could get nothing out of him. It was about sunset that the Sháh returned from hunting and summoned me. I went to him and related all that had happened. The Sháh insisted that I should make him confess and then put him to death. So I went back and had him branded once again. He laughed under the impact of the red-hot iron and never implored. I even consented that this fellow should say that what he had brought was a petition and make no mention of a letter. Even to that he did not consent. Then I lost my temper and ordered a plank to be brought. A <i>farrásh</i>, who wielded a pounder used for ramming in iron pegs, put this man's head on the plank, and stood over him with the raised pounder. I told him: "If you divulge the names of your comrades you will be released, otherwise I will order them to bring that pounder down on your head." He began to laugh and give thanks for having gained his object. I consented that he should say it was a petition he had brought, not a letter. He even would not say that. And all those red-hot rods applied to his flesh caused him no anguish. So, in the end, I gave a sign to the <i>farrásh</i>, and he brought down the pounder on this fellow's head. His
+	   me and told him once again: "Give me the names of your comrades." He did not answer me at all and began to laugh. It seemed as if all that beating had not harmed him in any way. This made me angry. I ordered a branding-iron to be brought and a lighted brazier.* While they were preparing the brazier I said: "Come and speak the truth, else I will have you branded"; and at that I noticed that his laughter increased. Then I had him bastinadoed again. Beating him that much tired out the <i>farráshes</i>. I myself was also tired out. So I had him untied and taken to the back of another tent, and told the <i>farráshes</i> that by dint of branding they ought to get a confession from him. They applied red-hot iron several times to his back and chest. I could hear the sizzling noise of the burning flesh and smell it too. But no matter how hard we tried we could get nothing out of him. It was about sunset that the Sháh returned from hunting and summoned me. I went to him and related all that had happened. The Sháh insisted that I should make him confess and then put him to death. So I went back and had him branded once again. He laughed under the impact of the red-hot iron and never implored. I even consented that this fellow should say that what he had brought was a petition and make no mention of a letter. Even to that he did not consent. Then I lost my temper and ordered a plank to be brought. A <i>farrásh</i>, who wielded a pounder used for ramming in iron pegs, put this man's head on the plank, and stood over him with the raised pounder. I told him: "If you divulge the names of your comrades you will be released, otherwise I will order them to bring that pounder down on your head." He began to laugh and give thanks for having gained his object. I consented that he should say it was a petition he had brought, not a letter. He even would not say that. And all those red-hot rods applied to his flesh caused him no anguish. So, in the end, I gave a sign to the <i>farrásh</i>, and he brought down the pounder on this fellow's head. His 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -293,7 +295,7 @@
 	   skull was smashed and his brain oozed through his nostrils. Then I went myself and reported it all to the Sháh.'<p>
 	   This Kázim Khán-i-Farrásh-Báshí was astounded by that man's behaviour and endurance, astonished that all the beatings and application of red-hot metal to his body had no effect on him, causing him no distress...That same letter the Sháh sent to Tihrán for Mullá 'Alíy-i-Kaní and other Mullás to read and to answer. But they said that there was nothing to answer; and Hájí Mullá 'Alí wrote to Mustawfíyu'l-Mamálik (who was the Premier at the time) to tell the Sháh that, 'If, God forbid, you should have any doubts regarding Islám and your belief is not firm enough, I ought to take action to dispel your doubts. Otherwise such letters have no answer. The answer was exactly what you did to his messenger. Now you must write to the Ottoman Sultán to be very strict with him and prevent all communications.' Sultán 'Abdu'l-'Azíz was living then. It was during his reign.<p>
 	   <blockquote>
-	   27 Rabí'u'l-Avval 1331, 2 March AD 1913<br>
+	   27 Rabí'u'l-Avval 1331, 2 March AD 1913<br> 
 	   Written at the Hotel d'Albe in Paris.
 	   </blockquote>
 	   Tonight I could not sleep. Mme. Dreyfus had sent me this book and I had not yet read it. It is early morning. I opened the book and read on till I reached the theme of Letters to the Kings, and to Násiri'd-Dín Sháh. Because I had been there on that journey and had heard this account personally from Kázim Khán-i-Farrásh-Báshí, I wrote it down.<p>
@@ -398,7 +400,7 @@
 	   of Bahá'u'lláh lamented his sufferings, extolled his act of self-sacrifice and heroism and referred to him as the 'Pride of Martyrs' (Fakhru'sh-Shuhadá). In almost every Tablet revealed in a space of three years, He referred to Badí' in glowing terms, recalling his martyrdom and his indomitable faith. And these Tablets He designated as the 'Salt of My Tablets'.<p>
 	   In these Tablets, Bahá'u'lláh not only glorifies the station of Badí', but also attaches great importance to the proclamation of His message to the Sháh of Persia. In one of these Tablets<small><sup>14</sup></small> He states in referring to Badí' that He had offered up the life of one of His servants after having created him anew with the hands of might and power, and sent him straight into the mouth of a serpent, so that the peoples of the world might become assured that the Almighty God stands transcendent and supreme over His creation. Bahá'u'lláh further states that He sent Badí' with a Book in which He had proclaimed His Cause and declared conclusively His proofs to all humanity: He affirms that He had removed from the person of Badí' every trace of fear, adorned him with the ornament of faith and power, fired his soul with the utterance of a Word and sent him out as a ball of fire to proclaim His Cause.<p>
 	   Statements such as these may be found in numerous Tablets which flowed from the Pen of Bahá'u'lláh during these three years.<p>
-	   The proclamation of the Cause of Bahá'u'lláh to the Sháh of Persia had a special significance. This momentous Tablet,* handed to the person of the sovereign himself, was meant to introduce the Faith of Bahá'u'lláh in its true perspective to the inhabitants of Persia. The people in that country knew a good deal about the Bábí Faith and the majority were antagonistic to it. For over two decades the people of Persia had witnessed memorable acts of heroism performed by that small band of God-intoxicated heroes whose devotion and self-sacrifice had
+	   The proclamation of the Cause of Bahá'u'lláh to the Sháh of Persia had a special significance. This momentous Tablet,* handed to the person of the sovereign himself, was meant to introduce the Faith of Bahá'u'lláh in its true perspective to the inhabitants of Persia. The people in that country knew a good deal about the Bábí Faith and the majority were antagonistic to it. For over two decades the people of Persia had witnessed memorable acts of heroism performed by that small band of God-intoxicated heroes whose devotion and self-sacrifice had 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p199">199</a></center><p>
@@ -479,7 +481,7 @@
        <td>
 	   	   <FORM ACTION="p147-173Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -487,12 +489,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p204-220Ch10.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
