--- a/Baha'i/Others/ROB/V3/p322-342Ch15.html
+++ b/Baha'i/Others/ROB/V3/p322-342Ch15.html
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="p308-321Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -25,12 +25,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p343-370Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -57,7 +57,7 @@
        Similarly, a believer must continue his journey of love to Bahá'u'lláh. The most important step in achieving this is to read the words of Bahá'u'lláh in order to commune with Him and become attracted to His Holy Person. Indeed, this is one of His commandments in the <i>Kitáb-i-Aqdas</i>. He enjoins His followers to recite His words* twice a day, in the morning and the evening, and states that those who do not have failed to fulfil their pledge to the Covenant of God. These are His words in that Book:<p>
        <blockquote>
 	   Recite ye the verses of God every morning and evening. Whoso reciteth them not hath truly failed to fulfil his pledge to the Covenant of God and His Testament and whoso in this day turneth away therefrom, hath indeed turned away from God since time immemorial. Fear ye God, O concourse of My servants.<p>
-       Take heed lest excessive reading and too many acts of piety in the daytime and in the night season make you vainglorious. Should a person recite but a single verse from the Holy Writings in a spirit of joy and radiance, this would be better for him than reciting wearily all the Scriptures of God, the Help in Peril, the Self-Subsisting. Recite ye the verses of God to such measure that ye be not overtaken with fatigue or boredom. Burden not your souls so as to cause exhaustion and weigh them down, but rather endeavour to
+       Take heed lest excessive reading and too many acts of piety in the daytime and in the night season make you vainglorious. Should a person recite but a single verse from the Holy Writings in a spirit of joy and radiance, this would be better for him than reciting wearily all the Scriptures of God, the Help in Peril, the Self-Subsisting. Recite ye the verses of God to such measure that ye be not overtaken with fatigue or boredom. Burden not your souls so as to cause exhaustion and weigh them down, but rather endeavour to 
        </blockquote>
 	   </td>
        <td></td>
@@ -81,10 +81,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p324">324</a></center><p>
 	   <hr>
-	   1. <i>Prayer, Meditation and the Devotional Attitude</i>, p. 1.<p>
+	   1. <i>Prayer, Meditation and the Devotional Attitude</i>, p. 1.<p> 
 	   2. <i>Synopsis</i>, p. 27.<p>
 	   <hr>
-	   ["Immerse yourselves..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para182">&para;182</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para274">LXX</a>;
+	   ["Immerse yourselves..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para182">&para;182</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para274">LXX</a>; 	   
 	   </small></td>
 </tr>
 <tr>
@@ -144,7 +144,7 @@
 	   'Abdu'l-Bahá has also stressed the importance of child education in many of His Tablets. The following are a few examples:<p>
        <blockquote>
 	   It is for this reason that, in this new cycle, education and training are recorded in the Book of God as obligatory and not voluntary. That is, it is enjoined upon the father and mother, as a duty, to strive with all effort to train the daughter and the son, to nurse them from the breast of knowledge and to rear them in the bosom of sciences and arts. Should they neglect this matter, they shall be held responsible and worthy of reproach in the presence of the stern Lord.<small><sup>8</sup></small><p>
-	   <br><br>
+	   <br><br>	   
        ...from the very beginning, the children must receive divine education and must continually be reminded to remember their God. Let the love of God pervade their inmost being, commingled with their mother's milk.<small><sup>9</sup></small><p>
 	   </blockquote>
 </td>
@@ -212,7 +212,7 @@
        * see pp. <a href="p087-107Ch05.html#p90">90</a>-91.<p>
        † see vol. 2, pp. <a href="../V2/p065-106Ch04.html#p91">91</a>-106.<p>
 	   <hr>
-	   14. <i>Makátíb-i-'Abdu'l-Bahá</i>, vol. 8, p. 51.<p>
+	   14. <i>Makátíb-i-'Abdu'l-Bahá</i>, vol. 8, p. 51.<p> 
 	   15. pp. 18-34.<p>
 	   16. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#CLVIII">CLVIII</a>.
        </small></td>
@@ -231,7 +231,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p332">332</a></center><p>
 	   <hr>
-	   17. <i>Tablets of the Divine Plan</i>, p. 51.<p>
+	   17. <i>Tablets of the Divine Plan</i>, p. 51.<p> 
 	   18. <i>Bahá'í Administration</i>, p. 66.
 	   </small></td>
 </tr>
@@ -239,7 +239,7 @@
        <td>
        There are no set methods or procedures, although we have been given certain principles and guide-lines by the Author of the Faith and by 'Abdu'l-Bahá and Shoghi Effendi. These principles and guides are at variance with standards and methods current outside the Faith, where frequently every expedient measure is used to influence people and convert them to various ideologies. The Cause of Bahá'u'lláh is founded on the truth of God's Revelation, and truth cannot be clothed in false standards. It cannot employ the techniques of salesmanship, propaganda, expediency and compromise. The methods used in the commercial world to attract people to new ideas, such as extravagant and sensational publicity based on slogans, extreme statements and similar gimmicks, are all alien to the Cause of God.<p>
        In his teaching work a Bahá'í presents the Message of Bahá'u'lláh as one would offer a gift to a king. Since his primary object in teaching is not to increase numbers,* but rather to bring a soul to its God, he ought to approach his fellow men with feelings of love and humility, and above all take to them the transforming power of Bahá'u'lláh and nothing of himself. Indeed, if he tries to project himself, by impressing upon the listener his knowledge and accomplishments, and aims to establish the ascendancy of his arguments while teaching the Faith, then the power of Bahá'u'lláh cannot reach him.<p>
-       Success in teaching depends on one's ability and readiness to draw from the power of Bahá'u'lláh. There is no alternative. If the believer does not open the way for Bahá'u'lláh through his love for Him, by his life and by teaching His Cause with devotion, His confirmations and assistance cannot reach him, and he will fail in his service to Him. Those who rank foremost among Bahá'í teachers were always conscious of the presence of Bahá'u'lláh at every stage of their teaching activities. It was because of the consciousness of His presence that they were enabled to approach with genuine love and humility those who
+       Success in teaching depends on one's ability and readiness to draw from the power of Bahá'u'lláh. There is no alternative. If the believer does not open the way for Bahá'u'lláh through his love for Him, by his life and by teaching His Cause with devotion, His confirmations and assistance cannot reach him, and he will fail in his service to Him. Those who rank foremost among Bahá'í teachers were always conscious of the presence of Bahá'u'lláh at every stage of their teaching activities. It was because of the consciousness of His presence that they were enabled to approach with genuine love and humility those who 
        </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p333">333</a></center><p>
@@ -250,7 +250,7 @@
        <td>
        were seeking the truth, attracting them with the warmth of their faith and the creative power of their words. It was this consciousness which enabled them to radiate the glory of the new-born Faith of God, to demonstrate its truth, to promote its interests, to withstand the onslaught of its enemies and to win imperishable victories for their Lord.<p>
        Bahá'u'lláh often counselled His followers how to teach the Faith. For example, He directed Hájí Muhammad-Táhir-i-Málmírí, when he was leaving His presence, to engage in teaching the Cause in his native city of Yazd and gave him some instructions as to how to teach. Foremost among these instructions was to pray for the seeker and urge him also to pray so that the confirmations of God might reach him and open his eyes to the truth of the Cause. Another counsel was to begin teaching with the account of the history of the religions of the past and their Founders, similar to the accounts given in the <i>Kitáb-i-Íqán</i>. This would enable the enquirer to get an insight into his own religion that he might recognize the truth and the reality of the Founder of his own Faith. When this stage was reached, the individual would be ready to appreciate and understand the Cause of God for this day.*<p>
-       To cite another example: there is a Tablet<small><sup>19</sup></small> from Bahá'u'lláh in which Fáris† (the Christian Syrian who embraced the Faith in Alexandria) is exhorted to teach with wisdom. He counsels him not to disclose to people everything about the Cause at first, but rather to teach them little by little until they are ready to absorb more. He likens this process to feeding infants who need to be given a little milk at a time until they grow in strength and are able to digest other food. This exhortation of Bahá'u'lláh is the basis of teaching the Cause of God. The principles involved are very similar to those which a schoolteacher employs in teaching his pupils little by little and in accordance with their capacity. Before teaching the Cause to any person, it is important to know his background and
+       To cite another example: there is a Tablet<small><sup>19</sup></small> from Bahá'u'lláh in which Fáris† (the Christian Syrian who embraced the Faith in Alexandria) is exhorted to teach with wisdom. He counsels him not to disclose to people everything about the Cause at first, but rather to teach them little by little until they are ready to absorb more. He likens this process to feeding infants who need to be given a little milk at a time until they grow in strength and are able to digest other food. This exhortation of Bahá'u'lláh is the basis of teaching the Cause of God. The principles involved are very similar to those which a schoolteacher employs in teaching his pupils little by little and in accordance with their capacity. Before teaching the Cause to any person, it is important to know his background and 
        </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p334">334</a></center><p>
@@ -278,7 +278,7 @@
        <blockquote>discussion. He then said, 'The Most Great Branch* will listen to any absurd talk with such attentiveness that the person concerned believes that He is deriving enlightenment from him. However, little by little, and in a way that the person cannot realize, He bestows upon him a new vision and a new understanding.'† <small><sup>20</sup></small></blockquote>
        The talks of 'Abdu'l-Bahá in the West provide the best example of wisdom in teaching. He addressed audiences who were almost alien to the history and genesis of the Faith and unfamiliar with the claims and the station of its Founder. Yet He disclosed to them with simplicity and brevity only those essential truths which they were capable of understanding and which constituted the first stepping-stones for their eventual recognition of the stupendous Message of Bahá'u'lláh. He clearly avoided at that early stage any elaboration on the many implications of the station of Bahá'u'lláh and His Revelation as well as the unfoldment of His laws and His World Order in the future. Instead, He bestowed upon every one who had the capacity a measure of His all-embracing love, which animated and sustained those few who embraced the Faith in the West.<p>
        Perhaps it is a temptation for a Bahá'í teacher, especially if he is a knowledgeable one, to pour out upon a seeker all his knowledge, and bombard him with a series of profound utterances and lengthy discussions with the aim of proving the truth of his own arguments. When this happens it blocks the way for the power of Bahá'u'lláh to reach the heart of the seeker and enlighten him with the light of faith.<p>
-       In following the footsteps of the Exemplar of the Faith of Bahá'u'lláh we may observe that when someone asked 'Abdu'l-Bahá a question, He often did not give the person all the answers. He gently prepared him to understand the subject. For example, He talked about something which
+       In following the footsteps of the Exemplar of the Faith of Bahá'u'lláh we may observe that when someone asked 'Abdu'l-Bahá a question, He often did not give the person all the answers. He gently prepared him to understand the subject. For example, He talked about something which 
        </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p336">336</a></center><p>
@@ -307,7 +307,7 @@
        Another story which throws light on the subject is the following by Colby Ives:<p>
 	   <blockquote>
        So one cold Spring day, a strong east wind blowing, I made a special journey to ask 'Abdu'l-Bahá about renunciation. I found the house at Ninety-sixth Street almost deserted. It seemed that 'Abdu'l-Bahá was spending a day or two at the home of one of the friends on Seventy-eighth Street and so I walked there and found Him on the point of returning to the home I had just left. But I was too intent on my mission to allow difficulties to interfere. I sought one of the Persian friends and, pointing to the passage in the little volume I carried in my pocket, I asked him if he would request 'Abdu'l-Bahá to speak to me for a few moments on this subject, and I read it to him so that there should be no mistake: 'Prevent me not from turning to the Horizon of renunciation.'<p>
-       Returning, he handed me the book saying that 'Abdu'l-Bahá requested that I walk with Him back to Ninety-sixth Street and He would talk with me on the way.<p>
+       Returning, he handed me the book saying that 'Abdu'l-Bahá requested that I walk with Him back to Ninety-sixth Street and He would talk with me on the way.<p> 
        I recall that there was quite a little procession of us, a dozen or so, mostly composed of the Persian friends but a few others; Lua Getsinger was one, I remember. The east wind was penetrating. I buttoned my coat closely with a little shiver. But 'Abdu'l-Bahá strode along with his 'abá (cloak) floating in the wind. He looked at me as we walked together at the head of the little group, with a slightly quizzical glance: He said that I seemed cold, a slightly amused glance accompanying the words, and I unaccountably felt a little disturbed. Why should I not feel cold? Could one be expected to live even above the weather? But this slight remark was indicative. Always His slightest word affected me as a summons. 'Come up higher!' He seemed to say.<p>
        As we walked a few paces ahead of the others He talked at length about Horizons. Of how the Sun of Reality, like the physical sun, rose at different points, the Sun of Moses at one point, the Sun of Jesus at another, the Sun of Muhammad, the Sun of Bahá'u'lláh at still others. But
        </blockquote>
@@ -325,7 +325,11 @@
        </blockquote>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p339">339</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p339">339</a></center><p>
+	   <hr>
+	   <hr>
+	   <a href="../../../AB/SAQ/Cover.html"><i>Some Answered Questions</i></a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -354,7 +358,7 @@
 </tr>
 <tr>
        <td>
-       <blockquote>even knowing whether He wished me to or not, and then the question wrapped in that sublime love: Are you interested in renunciation? has risen before me, a comforting and inspiring challenge. Indeed I <i>was</i> interested and my interest has never flagged from that day to this. But I never dreamed that renunciation could be so glorious.<small><sup>22</sup></small></blockquote>
+       <blockquote>even knowing whether He wished me to or not, and then the question wrapped in that sublime love: Are you interested in renunciation? has risen before me, a comforting and inspiring challenge. Indeed I <i>was</i> interested and my interest has never flagged from that day to this. But I never dreamed that renunciation could be so glorious.<small><sup>22</sup></small></blockquote>	   
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p342">342</a></center><p>
@@ -370,7 +374,7 @@
        <td>
 	   	   <FORM ACTION="p308-321Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -378,12 +382,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p343-370Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
